--- a/Makefile.rule
+++ b/Makefile.rule
@@ -29,8 +29,8 @@
 TARGET = GENERIC
 
 # BLAS and LAPACK version (for LA=BLAS in BLASFEO)
-#REF_BLAS = 0
-REF_BLAS = OPENBLAS
+REF_BLAS = 0
+#REF_BLAS = OPENBLAS
 #REF_BLAS = NETLIB
 #REF_BLAS = MKL
 #REF_BLAS = BLIS
