moved ocp_qp_res to own file

--- a/ocp_qp/Makefile
+++ b/ocp_qp/Makefile
@@ -37,12 +37,14 @@ endif
 OBJS += d_ocp_qp_dim.o
 OBJS += d_ocp_qp.o
 OBJS += d_ocp_qp_sol.o
+OBJS += d_ocp_qp_res.o
 OBJS += d_ocp_qp_kkt.o
 OBJS += d_ocp_qp_ipm.o
 # single
 OBJS += s_ocp_qp_dim.o
 OBJS += s_ocp_qp.o
 OBJS += s_ocp_qp_sol.o
+OBJS += s_ocp_qp_res.o
 OBJS += s_ocp_qp_kkt.o
 OBJS += s_ocp_qp_ipm.o
 # mixed
@@ -60,6 +62,8 @@ d_ocp_qp.o: d_ocp_qp.c x_ocp_qp.c
 s_ocp_qp.o: s_ocp_qp.c x_ocp_qp.c
 d_ocp_qp_sol.o: d_ocp_qp_sol.c x_ocp_qp_sol.c
 s_ocp_qp_sol.o: s_ocp_qp_sol.c x_ocp_qp_sol.c
+d_ocp_qp_res.o: d_ocp_qp_res.c x_ocp_qp_res.c
+s_ocp_qp_res.o: s_ocp_qp_res.c x_ocp_qp_res.c
 d_ocp_qp_kkt.o: d_ocp_qp_kkt.c x_ocp_qp_kkt.c
 s_ocp_qp_kkt.o: s_ocp_qp_kkt.c x_ocp_qp_kkt.c
 d_ocp_qp_ipm.o: d_ocp_qp_ipm.c x_ocp_qp_ipm.c
