dense qp ipm: (tmp) fixed iter ref for ns>0

--- a/test_problems/Makefile
+++ b/test_problems/Makefile
@@ -51,9 +51,9 @@ LIBS += /opt/atlas/lib/liblapack.a /opt/atlas/lib/libcblas.a /opt/atlas/lib/libf
 endif
 
 #OBJS_TEST = d_tools.o test_d_cond.o
-OBJS_TEST = d_tools.o test_d_part_cond.o
+#OBJS_TEST = d_tools.o test_d_part_cond.o
 #OBJS_TEST = test_d_dense.o
-#OBJS_TEST = d_tools.o test_d_ocp.o
+OBJS_TEST = d_tools.o test_d_ocp.o
 #OBJS_TEST = d_tools.o test_d_tree_ocp.o
 
 obj: $(OBJS_TEST)
