--- a/Makefile.rule
+++ b/Makefile.rule
@@ -29,6 +29,11 @@
 TARGET = AVX
 #TARGET = GENERIC
 
+# Use C99 extension to math library
+#
+# USE_C99_MATH = 0
+USE_C99_MATH = 1
+
 # BLAS and LAPACK version (for LA=BLAS in BLASFEO)
 REF_BLAS = 0
 #REF_BLAS = OPENBLAS
@@ -86,6 +91,10 @@ CFLAGS += -I$(BLASFEO_PATH)/include
 #ifeq ($(OS), WINDOWS)
 #CFLAGS  += -DOS_WINDOWS
 #endif
+
+ifeq ($(USE_C99_MATH), 1)
+CFLAGS += -DUSE_C99_MATH
+endif
 
 ifeq ($(REF_BLAS), 0)
 CFLAGS  += 
