split ns to nsbx, nsbu and nsg in ocp_qp, cond, and tree_ocp_qp and updated test problems to reflect these changes

--- a/test_problems/Makefile
+++ b/test_problems/Makefile
@@ -32,7 +32,7 @@ LIBS =
 LIBS += $(BLASFEO_PATH)/lib/libblasfeo.a
 
 ifeq ($(REF_BLAS), 0)
-LIBS += -lm 
+LIBS += -lm
 endif
 ifeq ($(REF_BLAS), OPENBLAS)
 LIBS += /opt/openblas/lib/libopenblas.a -pthread -lgfortran -lm
@@ -53,8 +53,8 @@ endif
 #OBJS_TEST = d_tools.o test_d_cond.o
 #OBJS_TEST = d_tools.o test_d_part_cond.o
 #OBJS_TEST = test_d_dense.o
-OBJS_TEST = d_tools.o test_d_ocp.o
-#OBJS_TEST = d_tools.o test_d_tree_ocp.o
+#OBJS_TEST = d_tools.o test_d_ocp.o
+OBJS_TEST = d_tools.o test_d_tree_ocp.o
 
 obj: $(OBJS_TEST)
 	$(CC) -o test.out $(OBJS_TEST) -L. libhpipm.a $(LIBS) #-pg
