--- a/test_problems/Makefile
+++ b/test_problems/Makefile
@@ -53,8 +53,8 @@ endif
 #OBJS_TEST = d_tools.o test_d_cond.o
 #OBJS_TEST = d_tools.o test_d_part_cond.o
 #OBJS_TEST = test_d_dense.o
-#OBJS_TEST = d_tools.o test_d_ocp.o
-OBJS_TEST = d_tools.o test_d_tree_ocp.o
+OBJS_TEST = d_tools.o test_d_ocp.o
+#OBJS_TEST = d_tools.o test_d_tree_ocp.o
 
 obj: $(OBJS_TEST)
 	$(CC) -o test.out $(OBJS_TEST) -L. libhpipm.a $(LIBS) #-pg
