--- a/tree_ocp_qp/Makefile
+++ b/tree_ocp_qp/Makefile
@@ -39,12 +39,14 @@ OBJS += scenario_tree.o
 OBJS += d_tree_ocp_qp_dim.o
 OBJS += d_tree_ocp_qp.o
 OBJS += d_tree_ocp_qp_sol.o
+OBJS += d_tree_ocp_qp_res.o
 OBJS += d_tree_ocp_qp_kkt.o
 OBJS += d_tree_ocp_qp_ipm.o
 # single
 OBJS += s_tree_ocp_qp_dim.o
 OBJS += s_tree_ocp_qp.o
 OBJS += s_tree_ocp_qp_sol.o
+OBJS += s_tree_ocp_qp_res.o
 OBJS += s_tree_ocp_qp_kkt.o
 OBJS += s_tree_ocp_qp_ipm.o
 
@@ -60,6 +62,8 @@ d_tree_ocp_qp.o: d_tree_ocp_qp.c x_tree_ocp_qp.c
 s_tree_ocp_qp.o: s_tree_ocp_qp.c x_tree_ocp_qp.c
 d_tree_ocp_qp_sol.o: d_tree_ocp_qp_sol.c x_tree_ocp_qp_sol.c
 s_tree_ocp_qp_sol.o: s_tree_ocp_qp_sol.c x_tree_ocp_qp_sol.c
+d_tree_ocp_qp_res.o: d_tree_ocp_qp_res.c x_tree_ocp_qp_res.c
+s_tree_ocp_qp_res.o: s_tree_ocp_qp_res.c x_tree_ocp_qp_res.c
 d_tree_ocp_qp_kkt.o: d_tree_ocp_qp_kkt.c x_tree_ocp_qp_kkt.c
 s_tree_ocp_qp_kkt.o: s_tree_ocp_qp_kkt.c x_tree_ocp_qp_kkt.c
 d_tree_ocp_qp_ipm.o: d_tree_ocp_qp_ipm.c x_tree_ocp_qp_ipm.c
