--- a/test_problems/Makefile
+++ b/test_problems/Makefile
@@ -54,7 +54,7 @@ endif
 #OBJS_TEST = d_tools.o test_d_part_cond.o
 #OBJS_TEST = test_d_dense.o
 OBJS_TEST = d_tools.o test_d_ocp.o
-#OBJS_TEST = d_tools.o test_d_ocp_phaseI.o
+#OBJS_TEST = d_tools.o test_d_ocp_phase_I.o
 #OBJS_TEST = d_tools.o test_d_tree_ocp.o
 
 obj: $(OBJS_TEST)
