--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,8 @@
 cmake_minimum_required(VERSION 2.8.11)
 project(hpipm)
 
+set(CMAKE_VERBOSE_MAKEFILE ON)
+
 # Target architecture
 set(TARGET GENERIC)
 
