ocp_qp: some cleaning to res & have sens work with partial condensing

--- a/examples/c/Makefile
+++ b/examples/c/Makefile
@@ -65,9 +65,10 @@ OBJS_DATA = data/getting_started_data.o
 #OBJS_DATA = ../python/qp_data.o
 
 #OBJS_EXMP = $(OBJS_DATA) example_d_ocp_qp_unconstr.o
-OBJS_EXMP = $(OBJS_DATA) example_d_ocp_qp.o
+#OBJS_EXMP = $(OBJS_DATA) example_d_ocp_qp.o
 #OBJS_EXMP = $(OBJS_DATA) example_d_ocp_qp_part_cond.o
 #OBJS_EXMP = $(OBJS_DATA) example_d_ocp_qp_sens.o
+OBJS_EXMP = $(OBJS_DATA) example_d_ocp_qp_part_cond_sens.o
 
 obj: $(OBJS_EXMP)
 	$(CC) -o  example.out $(OBJS_EXMP) -L. libhpipm.a $(LIBS) -I../../include #-pg
