make dense_qcqp files as stand alone & reverted dense_qp removing quadr constr

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -170,6 +170,7 @@ file(GLOB COND_SRC
 	)
 # dense qp
 file(GLOB DENSE_QP_SRC
+	# double
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qp.c
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qp_dim.c
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qp_sol.c
@@ -177,6 +178,12 @@ file(GLOB DENSE_QP_SRC
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qp_ipm.c
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qp_res.c
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qp_utils.c
+	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qcqp_dim.c
+	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qcqp.c
+	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qcqp_sol.c
+	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qcqp_res.c
+	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qcqp_utils.c
+	# single
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qp.c
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qp_dim.c
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qp_sol.c
@@ -184,6 +191,11 @@ file(GLOB DENSE_QP_SRC
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qp_ipm.c
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qp_res.c
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qp_utils.c
+	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qcqp_dim.c
+	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qcqp.c
+	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qcqp_sol.c
+	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qcqp_res.c
+	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qcqp_utils.c
 	)
 # core ipm
 if(${TARGET} MATCHES AVX)
