--- a/dense_qp/Makefile
+++ b/dense_qp/Makefile
@@ -50,6 +50,11 @@ OBJS += d_dense_qp_res.o
 OBJS += d_dense_qp_kkt.o 
 OBJS += d_dense_qp_ipm.o
 OBJS += d_dense_qp_utils.o
+OBJS += d_dense_qcqp_dim.o 
+OBJS += d_dense_qcqp.o 
+OBJS += d_dense_qcqp_sol.o 
+OBJS += d_dense_qcqp_utils.o 
+OBJS += d_dense_qcqp_res.o 
 # single
 OBJS += s_dense_qp_dim.o 
 OBJS += s_dense_qp.o 
@@ -58,6 +63,11 @@ OBJS += s_dense_qp_res.o
 OBJS += s_dense_qp_kkt.o 
 OBJS += s_dense_qp_ipm.o
 OBJS += s_dense_qp_utils.o
+OBJS += s_dense_qcqp_dim.o 
+OBJS += s_dense_qcqp.o 
+OBJS += s_dense_qcqp_sol.o 
+OBJS += s_dense_qcqp_utils.o 
+OBJS += s_dense_qcqp_res.o 
 # mixed
 OBJS += m_dense_qp_dim.o 
 OBJS += m_dense_qp.o 
@@ -82,3 +92,13 @@ d_dense_qp_ipm.o: d_dense_qp_ipm.c x_dense_qp_ipm.c
 s_dense_qp_ipm.o: s_dense_qp_ipm.c x_dense_qp_ipm.c
 d_dense_qp_utils.o: d_dense_qp_utils.c x_dense_qp_utils.c
 s_dense_qp_utils.o: s_dense_qp_utils.c x_dense_qp_utils.c
+d_dense_qcqp_dim.o: d_dense_qcqp_dim.c x_dense_qcqp_dim.c
+s_dense_qcqp_dim.o: s_dense_qcqp_dim.c x_dense_qcqp_dim.c
+d_dense_qcqp.o: d_dense_qcqp.c x_dense_qcqp.c
+s_dense_qcqp.o: s_dense_qcqp.c x_dense_qcqp.c
+d_dense_qcqp_sol.o: d_dense_qcqp_sol.c x_dense_qcqp_sol.c
+s_dense_qcqp_sol.o: s_dense_qcqp_sol.c x_dense_qcqp_sol.c
+d_dense_qcqp_res.o: d_dense_qcqp_res.c x_dense_qcqp_res.c
+s_dense_qcqp_res.o: s_dense_qcqp_res.c x_dense_qcqp_res.c
+d_dense_qcqp_utils.o: d_dense_qcqp_utils.c x_dense_qcqp_utils.c
+s_dense_qcqp_utils.o: s_dense_qcqp_utils.c x_dense_qcqp_utils.c
