dense_qcqp: add arg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,6 +182,7 @@ file(GLOB DENSE_QP_SRC
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qcqp.c
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qcqp_sol.c
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qcqp_res.c
+	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qcqp_ipm.c
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qcqp_utils.c
 	# single
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qp.c
@@ -195,6 +196,7 @@ file(GLOB DENSE_QP_SRC
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qcqp.c
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qcqp_sol.c
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qcqp_res.c
+	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qcqp_ipm.c
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qcqp_utils.c
 	)
 # core ipm
