ocp_qcqp: add qcqp_dim & qcqp

--- a/ocp_qp/Makefile
+++ b/ocp_qp/Makefile
@@ -50,6 +50,8 @@ OBJS += d_ocp_qp_res.o
 OBJS += d_ocp_qp_kkt.o
 OBJS += d_ocp_qp_ipm.o
 OBJS += d_ocp_qp_utils.o
+OBJS += d_ocp_qcqp_dim.o
+OBJS += d_ocp_qcqp.o
 # single
 OBJS += s_ocp_qp_dim.o
 OBJS += s_ocp_qp.o
@@ -58,6 +60,8 @@ OBJS += s_ocp_qp_res.o
 OBJS += s_ocp_qp_kkt.o
 OBJS += s_ocp_qp_ipm.o
 OBJS += s_ocp_qp_utils.o
+OBJS += s_ocp_qcqp_dim.o
+OBJS += s_ocp_qcqp.o
 # mixed
 #OBJS += m_ocp_qp.o                m_ocp_qp_kkt.o m_ocp_qp_ipm.o
 
@@ -81,3 +85,7 @@ d_ocp_qp_ipm.o: d_ocp_qp_ipm.c x_ocp_qp_ipm.c
 s_ocp_qp_ipm.o: s_ocp_qp_ipm.c x_ocp_qp_ipm.c
 d_ocp_qp_utils.o: d_ocp_qp_utils.c x_ocp_qp_utils.c
 s_ocp_qp_utils.o: s_ocp_qp_utils.c x_ocp_qp_utils.c
+d_ocp_qcqp_dim.o: d_ocp_qcqp_dim.c x_ocp_qcqp_dim.c
+s_ocp_qcqp_dim.o: s_ocp_qcqp_dim.c x_ocp_qcqp_dim.c
+d_ocp_qcqp.o: d_ocp_qcqp.c x_ocp_qcqp.c
+s_ocp_qcqp.o: s_ocp_qcqp.c x_ocp_qcqp.c
