--- a/ocp_qp/Makefile
+++ b/ocp_qp/Makefile
@@ -53,6 +53,7 @@ OBJS += d_ocp_qp_utils.o
 OBJS += d_ocp_qcqp_dim.o
 OBJS += d_ocp_qcqp.o
 OBJS += d_ocp_qcqp_sol.o
+OBJS += d_ocp_qcqp_res.o
 # single
 OBJS += s_ocp_qp_dim.o
 OBJS += s_ocp_qp.o
@@ -64,6 +65,7 @@ OBJS += s_ocp_qp_utils.o
 OBJS += s_ocp_qcqp_dim.o
 OBJS += s_ocp_qcqp.o
 OBJS += s_ocp_qcqp_sol.o
+OBJS += s_ocp_qcqp_res.o
 # mixed
 #OBJS += m_ocp_qp.o                m_ocp_qp_kkt.o m_ocp_qp_ipm.o
 
@@ -93,3 +95,5 @@ d_ocp_qcqp.o: d_ocp_qcqp.c x_ocp_qcqp.c
 s_ocp_qcqp.o: s_ocp_qcqp.c x_ocp_qcqp.c
 d_ocp_qcqp_sol.o: d_ocp_qcqp_sol.c x_ocp_qcqp_sol.c
 s_ocp_qcqp_sol.o: s_ocp_qcqp_sol.c x_ocp_qcqp_sol.c
+d_ocp_qcqp_res.o: d_ocp_qcqp_res.c x_ocp_qcqp_res.c
+s_ocp_qcqp_res.o: s_ocp_qcqp_res.c x_ocp_qcqp_res.c
