--- a/test_problems/Makefile
+++ b/test_problems/Makefile
@@ -60,6 +60,7 @@ LIBS += /opt/atlas/lib/liblapack.a /opt/atlas/lib/libcblas.a /opt/atlas/lib/libf
 endif
 
 #OBJS_TEST = d_tools.o test_d_cond.o
+#OBJS_TEST = d_tools.o test_d_cond_qcqp.o
 #OBJS_TEST = d_tools.o test_d_part_cond.o
 #OBJS_TEST = test_d_dense.o
 #OBJS_TEST = test_d_dense_qcqp.o
