working on adding cast_qcqp

--- a/cond/Makefile
+++ b/cond/Makefile
@@ -47,11 +47,13 @@ OBJS += d_cond_aux.o
 OBJS += d_cond.o
 OBJS += d_part_cond.o
 OBJS += d_cond_qcqp.o
+OBJS += d_cast_qcqp.o
 # single
 OBJS += s_cond_aux.o
 OBJS += s_cond.o
 OBJS += s_part_cond.o
 OBJS += s_cond_qcqp.o
+OBJS += s_cast_qcqp.o
 
 obj: $(OBJS)
 
@@ -67,3 +69,5 @@ d_part_cond.o: d_part_cond.c x_part_cond.c
 s_part_cond.o: s_part_cond.c x_part_cond.c
 d_cond_qcqp.o: d_cond_qcqp.c x_cond_qcqp.c
 s_cond_qcqp.o: s_cond_qcqp.c x_cond_qcqp.c
+d_cast_qcqp.o: d_cast_qcqp.c x_cast_qcqp.c
+s_cast_qcqp.o: s_cast_qcqp.c x_cast_qcqp.c
