add test_d_part_cond_qcqp & some debugging of part cond qcqp

--- a/cond/Makefile
+++ b/cond/Makefile
@@ -48,12 +48,14 @@ OBJS += d_cond.o
 OBJS += d_part_cond.o
 OBJS += d_cond_qcqp.o
 OBJS += d_cast_qcqp.o
+OBJS += d_part_cond_qcqp.o
 # single
 OBJS += s_cond_aux.o
 OBJS += s_cond.o
 OBJS += s_part_cond.o
 OBJS += s_cond_qcqp.o
 OBJS += s_cast_qcqp.o
+OBJS += s_part_cond_qcqp.o
 
 obj: $(OBJS)
 
@@ -71,3 +73,5 @@ d_cond_qcqp.o: d_cond_qcqp.c x_cond_qcqp.c
 s_cond_qcqp.o: s_cond_qcqp.c x_cond_qcqp.c
 d_cast_qcqp.o: d_cast_qcqp.c x_cast_qcqp.c
 s_cast_qcqp.o: s_cast_qcqp.c x_cast_qcqp.c
+d_part_cond_qcqp.o: d_part_cond_qcqp.c x_part_cond_qcqp.c
+s_part_cond_qcqp.o: s_part_cond_qcqp.c x_part_cond_qcqp.c
