--- a/test_problems/Makefile
+++ b/test_problems/Makefile
@@ -63,6 +63,7 @@ endif
 #OBJS_TEST = d_tools.o test_d_cond_qcqp.o
 #OBJS_TEST = d_tools.o test_d_cast_qcqp.o
 #OBJS_TEST = d_tools.o test_d_part_cond.o
+#OBJS_TEST = d_tools.o test_d_part_cond_qcqp.o
 #OBJS_TEST = test_d_dense.o
 #OBJS_TEST = test_d_dense_qcqp.o
 OBJS_TEST = d_tools.o test_d_ocp.o
