--- a/test_problems/Makefile
+++ b/test_problems/Makefile
@@ -36,7 +36,7 @@
 
 include ../Makefile.rule
 
-PRINT = 1
+PRINT = 0
 CFLAGS += -DPRINT=$(PRINT)
 
 LIBS =
@@ -62,6 +62,9 @@ ifeq ($(REF_BLAS), ATLAS)
 LIBS += /opt/atlas/lib/liblapack.a /opt/atlas/lib/libcblas.a /opt/atlas/lib/libf77blas.a /opt/atlas/lib/libatlas.a -lgfortran -lm
 endif
 
+
+### one single test ###
+
 #OBJS_TEST = d_tools.o test_d_cond.o
 #OBJS_TEST = d_tools.o test_d_cond_qcqp.o
 #OBJS_TEST = d_tools.o test_d_cast_qcqp.o
@@ -77,8 +80,23 @@ OBJS_TEST = d_tools.o test_d_ocp.o
 obj: $(OBJS_TEST)
 	$(CC) -o test.out $(OBJS_TEST) -L. libhpipm.a $(LIBS) #-pg
 
+
+### all individual tests ###
+
+# mass spring system
+test_d_ocp test_d_ocp_qcqp test_d_cond test_d_cond_qcqp test_d_part_cond test_d_part_cond_qcqp test_d_tree_ocp: %: d_tools.o %.o
+	$(CC) -o $@.out $^ -L. libhpipm.a $(LIBS)
+	./$@.out
+
+# stand-alone
+test_d_dense test_d_dense_qcqp: %: %.o
+	$(CC) -o $@.out $< -L. libhpipm.a $(LIBS)
+	./$@.out
+
+
+### clean ###
 clean:
 	rm -f *.o
-	rm -f test.out
+	rm -f *.out
 	rm -f libhpipm.a
 
